# voxel_game

./: Cargo.toml  LICENSE  README.md  build.rs  gui_data.json  gui_data.yaml  rust-toolchain.toml  scope.md
crates/game/: Cargo.toml
crates/game/src/: lib.rs  renderer.rs  world.rs
crates/vox_core/: Cargo.toml
crates/vox_core/src/: camera.rs  lib.rs  terrain.rs  utils.rs
crates/vox_engine/: Cargo.toml  build.rs
crates/vox_engine/resources/: 3x3x3.vox  teapot.vox
crates/vox_engine/resources/raytracing_shader/: Cargo.toml
crates/vox_engine/resources/raytracing_shader/src/: lib.rs
crates/vox_engine/resources/screen_shader/: Cargo.toml
crates/vox_engine/resources/screen_shader/src/: lib.rs
crates/vox_engine/resources/terrain_gen/: Cargo.toml
crates/vox_engine/resources/terrain_gen/src/: lib.rs  noise.rs
crates/vox_engine/resources/voxel_raytracer/: Cargo.toml
crates/vox_engine/resources/voxel_raytracer/src/: lib.rs
crates/vox_engine/src/: gpu_utils.rs  lib.rs  math.rs  prelude.rs  utils.rs
crates/vox_engine/src/app/: input.rs  mod.rs
crates/vox_engine/src/gpu_utils/: buffer.rs  mod.rs
crates/vox_engine/src/rendering/: camera.rs  gui.rs  mod.rs
crates/vox_engine/src/voxel/: mod.rs  prefab.rs  raytracing_shader.wgsl  terrain.rs  voxel_renderer.rs
info/: game_idea.md  primary_mechanics.md  requirements.md  sources.md
misc/: tint.html
spirt-passes/: raytracing_shader.spirt  raytracing_shader.spirt.html  screen_shader.spirt  screen_shader.spirt.html  test_shader.spirt  test_shader.spirt.html
src/: application.rs  camera.rs  colors.rs  debug_utils.rs  gpu.rs  gpu_utils.rs  main.rs  math.rs  rendering.rs  shader.wgsl  test.rs  utils.rs  voxel.rs  world.rs
src/application/: input.rs
src/gpu/: bind_group.rs  compute.rs
src/gpu_utils/: bind_group.rs  buffer.rs  texture.rs
src/math/: colors.rs  mod.rs  vectors.rs
src/rendering/: bind_group.rs  buffer.rs  debug_render_stage.rs  debug_rendering.rs  gui.rs  mesh.rs  renderer.rs  voxel_render_stage.rs
src/shaders/: debug_shader.wgsl  mesh_shader.wgsl  test_compute.wgsl  voxel_shader.wgsl  voxel_terrain_shader.wgsl
src/shaders/raytracing_shader/: Cargo.toml
src/shaders/raytracing_shader/src/: lib.rs  math.rs  utils.rs
src/shaders/terrain_shader/: Cargo.toml
src/shaders/terrain_shader/src/: lib.rs
src/shaders/test_shader/: Cargo.toml
src/shaders/test_shader/src/: lib.rs
src/shaders/voxel_shader/: Cargo.toml
src/shaders/voxel_shader/src/: lib.rs
src/voxel/: brick_map.rs  mod.rs  octree.rs  rendering.rs  terrain.rs  terrain_renderer.rs  voxel_rendering.rs  world_gen.rs
