[workspace]
members = [
    "src/shaders/test_shader",
    "src/shaders/terrain_shader"
]

[package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
cgmath = "0.18.0"
egui-wgpu = "0.23.0"
egui-winit = "0.23.0"
env_logger = "0.10.0"
futures-intrusive = "0.5.0"
noise = "0.8.2"
pollster = "0.3.0"
wgpu = {version = "0.17.0", features = ["spirv"]}
winit = "0.28.6"

[build-dependencies]
spirv-builder = "0.9"

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3
