[workspace]
members = [
    "crates/vox_engine/resources/screen_shader",
    "crates/vox_engine/resources/raytracing_shader",
    "crates/vox_engine",
    "crates/game",
    "crates/vox_core"
]

[package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
game = { path = "crates/game" }

[build-dependencies]
spirv-builder = "0.9"

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3
